# HRMS

./: README.md  main.py  pyproject.toml
app/: main.py
app/core/: config.py
app/models/: attendance.py  employee.py
app/routes/: attendance.py  employee.py
app/utils/: responses.py
